add responsive design

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 itaque harum, exercitationem beatae pariatur tenetur molestias adipisci?</p>
             
             <div class="socials-container">
-                <a href="https://github.com/duynguyen-js/responsive-page" target="_blank"><img src="" alt="github logo"></a>
-                <a href="https://www.linkedin.com/in/duy-nguyen-a57462292/" target="_blank"><img src="" alt="linkedin logo"></a>
-                <a href="https://www.instagram.com/duy_nguyenn04/" target="_blank"><img src="" alt="instagram logo"></a>
+                <a href="https://github.com/duynguyen-js/responsive-page" target="_blank"><img src="./images/github.png" alt="github logo"></a>
+                <a href="https://www.linkedin.com/in/duy-nguyen-a57462292/" target="_blank"><img src="./images/linkedin.png" alt="linkedin logo"></a>
+                <a href="https://www.instagram.com/duy_nguyenn04/" target="_blank"><img src="./images/instagram.png" alt="instagram logo"></a>
             </div>
 
 
@@ -39,8 +39,10 @@
                 <div class="project-details">
                     <div class="project-name">
                         <h4>Project name</h4>
-                        <a href=""><img src="" alt="github"></a>
-                        <a href=""><img src="" alt="link"></a>
+                        <div class="socials-container">
+                            <a href=""><img src="./images/github.png" alt="github"></a>
+                            <a href=""><img src="./images/link.png" alt="link"></a>
+                        </div>
                     </div>
                     <p class="description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, omnis?
@@ -53,8 +55,10 @@
                 <div class="project-details">
                     <div class="project-name">
                         <h4>Project name</h4>
-                        <a href=""><img src="" alt="github"></a>
-                        <a href=""><img src="" alt="link"></a>
+                        <div class="socials-container">
+                            <a href=""><img src="./images/github.png" alt="github"></a>
+                            <a href=""><img src="./images/link.png" alt="link"></a>
+                        </div>
                     </div>
                     <p class="description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, omnis?
@@ -67,8 +71,10 @@
                 <div class="project-details">
                     <div class="project-name">
                         <h4>Project name</h4>
-                        <a href=""><img src="" alt="github"></a>
-                        <a href=""><img src="" alt="link"></a>
+                        <div class="socials-container">
+                            <a href=""><img src="./images/github.png" alt="github"></a>
+                            <a href=""><img src="./images/link.png" alt="link"></a>
+                        </div>
                     </div>
                     <p class="description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, omnis?
@@ -81,8 +87,10 @@
                 <div class="project-details">
                     <div class="project-name">
                         <h4>Project name</h4>
-                        <a href=""><img src="" alt="github"></a>
-                        <a href=""><img src="" alt="link"></a>
+                        <div class="socials-container">
+                            <a href=""><img src="./images/github.png" alt="github"></a>
+                            <a href=""><img src="./images/link.png" alt="link"></a>
+                        </div>
                     </div>
                     <p class="description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, omnis?
@@ -95,8 +103,10 @@
                 <div class="project-details">
                     <div class="project-name">
                         <h4>Project name</h4>
-                        <a href=""><img src="" alt="github"></a>
-                        <a href=""><img src="" alt="link"></a>
+                        <div class="socials-container">
+                            <a href=""><img src="./images/github.png" alt="github"></a>
+                            <a href=""><img src="./images/link.png" alt="link"></a>
+                        </div>
                     </div>
                     <p class="description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, omnis?
@@ -109,8 +119,10 @@
                 <div class="project-details">
                     <div class="project-name">
                         <h4>Project name</h4>
-                        <a href=""><img src="" alt="github"></a>
-                        <a href=""><img src="" alt="link"></a>
+                        <div class="socials-container">
+                            <a href=""><img src="./images/github.png" alt="github"></a>
+                            <a href=""><img src="./images/link.png" alt="link"></a>
+                        </div>
                     </div>
                     <p class="description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, omnis?
@@ -135,12 +147,12 @@
             <p>duynguyen@gmail.com</p>
 
             <div class="socials-container">
-                <a href="https://github.com/duynguyen-js/responsive-page" target="_blank"><img src="" alt="github logo"></a>
-                <a href="https://www.linkedin.com/in/duy-nguyen-a57462292/" target="_blank"><img src="" alt="linkedin logo"></a>
-                <a href="https://www.instagram.com/duy_nguyenn04/" target="_blank"><img src="" alt="instagram logo"></a>
+                <a href="https://github.com/duynguyen-js/responsive-page" target="_blank"><img src="./images/github.png" alt="github logo"></a>
+                <a href="https://www.linkedin.com/in/duy-nguyen-a57462292/" target="_blank"><img src="./images/linkedin.png" alt="linkedin logo"></a>
+                <a href="https://www.instagram.com/duy_nguyenn04/" target="_blank"><img src="./images/instagram.png" alt="instagram logo"></a>
             </div>
         </div>
-        <img src="" alt="headshot photo">
+        <img src="./images/headshot.png" alt="headshot photo">
     </footer>
 </body>
 </html>
